<resources>
    <string name="app_name">Notes App</string>
    <string name="tv_text">A simple note app with firebase</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_image">Login Image</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>