<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="64dp"
        android:padding="20dp"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_text"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:layout_marginTop="396dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn"/>



</androidx.constraintlayout.widget.ConstraintLayout>